--- a/WebContent/BooksSearch.html
+++ b/WebContent/BooksSearch.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="">
+<form action="bansal/library/books" method="post">
 <input type="text" name="searchItem"> <input type="submit">
 </form>
 
